hard-gists/4058325/run.log
=== Docker Run Log for 4058325 ===
Started at: Mi 29. Okt 14:18:56 CET 2025

[2025-10-29 14:18:57] START: Running container for 4058325
[2025-10-29 14:18:57] SUCCESS: Container cc78f0ac2456ef1d6bb26de1e983e28051ccec2e48cc45f5f507de68464f5a9a started for 4058325
=== Container logs for 4058325 ===
  File "/snippet.py", line 14
    print pm.ls(sl=True,fl=True,l=True)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4058325 ===
[2025-10-29 14:18:59] INFO: Container cc78f0ac2456ef1d6bb26de1e983e28051ccec2e48cc45f5f507de68464f5a9a has stopped
